feat: add Baidu analytics tracking script

--- a/home.html
+++ b/home.html
@@ -500,5 +500,14 @@
             });
         }
     </script>
+   <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?bc496c6424a2cb836a0512cba7f6d737";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
