--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
             });
         }
     </script>
-   <script>
+    <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -508,6 +508,7 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
+</script>
 </script>
 </body>
 </html>
