--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
     </div>
     <div class="welcome-content">
       <h1>🌈 心情日记</h1>
-      <p class="subtitle">记录美好每一天</p>
+      <p class="subtitle">在这里，收藏每一份心情，让情绪有迹可循</p>
       <p class="description">
         在这里，你可以自由地表达自己的心情，记录生活的点滴。
         通过文字、语音和声音，捕捉每一个情绪瞬间。
